# miRFetch

./: README.md  Untitled.ipynb  enviroment.yml  gprofiler.csv  miR-6540_genes_all_overlap.csv  overlapping_genes.csv  pyproject.toml  requirements.txt  treemap.html  trial_new_mitD_package.ipynb
.ipynb_checkpoints/: Tutorial_2-checkpoint.ipynb  trial_new_mitD_package-checkpoint.ipynb
Tests/: UnitTests.py
Tutorial/: Tutorial_2.ipynb  trial_new_mitD_package.ipynb
rnaFetch/: FetchBioMart.py  InitScrapper.py  mirCDSFetch.py  mirTFetch.py
